# OvertureLink-Data-Pipeline

./: .env.example  .gitignore  .mypy-baseline  .tmp_mypy_tracked_regressions.txt  Overture_dump.md  README.md  TODOS.md  pyproject.toml
.github/workflows/: ci.yml  run-pipeline.yml
configs/: afg.yml  afg_example.yml  global.yml
configs/templates/: sectoral.yml
src/o2agol/: __init__.py  boundaries.py  cache_manager.py  cleanup.py  cli.py  config_loader.py  debug.py  duck.py  dump_manager.py  errors.py  export.py  publish.py  transform.py  types.py  utils.py
src/o2agol/config/: __init__.py  countries.py  settings.py  template_config.py
src/o2agol/data/: agol_metadata.yml  countries.json  queries.yml
src/o2agol/domain/: __init__.py  contracts.py  enums.py  models.py
src/o2agol/pipeline/: __init__.py  export.py  publish.py  source.py  transform.py
src/pipeline/: main.py
