[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "overture-pipeline"
version = "0.1.0"
description = "Cloud-native ETL pipeline for Overture Maps data to ArcGIS Online"
readme = "README.md"
requires-python = ">=3.11"

authors = [
    { name = "Ryan Arias Delafosse, World Bank", email = "rariasdelafosse@worldbank.org" }
]

dependencies = [
    # Core geospatial and data processing
    "arcgis>=2.4,<2.5",           # 2.5+ unreviewed for API compatibility
    "arcgis-mapping",
    "duckdb>=1.1.3",
    "pyarrow>=16.1.0,<17.0",      # Hard constraint from arcgis 2.4.x metadata
    "geopandas>=1.1.2,<2.0",      # 1.1.2 patches CVE-2025-69662 (to_postgis SQLi)
    "pyogrio>=0.10.0",
    "shapely>=2.0.6",
    "pyproj>=3.6.1",
    "pandas>=2.0.0,<2.3.0",       # Hard constraint from arcgis 2.4.x metadata

    # HTTP and cloud access for optimized downloads
    "requests>=2.31.0",
    "boto3>=1.34.0",
    "tqdm>=4.66.0",

    # CLI and configuration
    "typer>=0.12.3,<0.13",
    "click<8.2.0",                # typer 0.12.x incompatible with click 8.2+
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "pydantic>=2.0.0,<3.0",

    # Observability and concurrency (hardening pass Phase 1 + Phase 3)
    "structlog>=24.1.0",          # Structured JSON logging with context binding
    "filelock>=3.15.0",           # Concurrent cache write serialization (Phase 3)
]

[project.optional-dependencies]
dev = [
    # Test and lint toolchain
    "pytest>=8.2.0",
    "ruff>=0.5.6",
    "mypy==1.20.0",               # Pin to keep mypy-baseline message text stable in CI
    "mypy-baseline==0.7.3",       # Keep ratchet behavior aligned with checked-in lockfiles
    "pip-tools>=7.4.0",           # pip-compile for per-platform lockfiles
    "pre-commit>=3.7.0",          # Local ruff+mypy gate
    # Test libraries (Phase 2+)
    "hypothesis>=6.100.0",        # Fuzz testing for apply_sql_filter (Phase 2)
    "psutil>=5.9.0",              # Benchmark peak-memory measurement (Phase 5)
    # Type stubs for mypy --strict
    "types-pyyaml",
    "types-requests",
    "types-tqdm",
]

[project.scripts]
o2agol = "o2agol.cli:app"

[tool.ruff]
line-length = 100
target-version = "py311"
lint.select = ["E","F","I","UP","B","SIM"]
lint.ignore = ["E501", "UP045"]  # UP045: Typer doesn't support X | None syntax

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "integration: tests that need DuckDB spatial extension or other non-unit infrastructure",
    "canary: live-network tests that run only in the weekly scheduled workflow",
    "slow: tests slower than 5s; excluded from the fast loop",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
